test/neg/bug45.scala
object Main {

    def main(args: Array[String]) = {
        def foo[Int](x: Int): Int = null;
        val y1 = null;
        val y2 = foo(2);
        ()
    }

}
